Fixed line chart on mobile

--- a/static/styles/CSS.css
+++ b/static/styles/CSS.css
@@ -63,7 +63,8 @@
 /* LINE CHART */
 
 .line-chart-filter {
-  width: 33%;
+  width: 28%;
+  min-width: 130px;
   padding: 10px;
   margin: 5px;
 }
@@ -73,7 +74,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
 }
 
 /* Info button */
